fixing spacing

--- a/main.css
+++ b/main.css
@@ -1,26 +1,23 @@
 header {
-    float: left;
-
-
+  float: left;
 }
-content
-{
-   padding: auto;
-    width:100px;
-    background-color: #ffffee;
+content{
+  padding: auto;
+  width:100px;
+  background-color: #ffffee;
 }
 footer
 {
-    font-family: Arial, sans-serif;
-    font-size: 13px;
-    padding: 5px;
+  font-family: Arial, sans-serif;
+  font-size: 13px;
+  padding: 5px;
     }
  #nav {
-        width: 550px;
-        height: 50px;
-        bottom:0px;
-        position: fixed;
-        text-decoration: none;
-        font-family: Lucinda console, monospace;
-     padding-top: 80px;
+  width: 550px;
+  height: 50px;
+  bottom:0px;
+  position: fixed;
+  text-decoration: none;
+  font-family: Lucinda console, monospace;
+  padding-top: 80px;
     }
